# ESP32-C3-WF-AMB

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
components/captive_manager/: Kconfig
components/captive_manager/include/: captive_manager.h  wifi_store.h
components/captive_manager/src/: captive_manager.c  wifi_store.c
components/esp_firebase/: app.cpp  app.h  firebase_c_shim.cpp  rtdb.cpp  rtdb.h
components/esp_firebase/include/: firebase.h
main/: CMakeLists.txt  Geoapify.c  geoapify_parser.cpp  main.c  sensors.c
